apps/productivity/karakeep/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: karakeep
  namespace: karakeep
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`karakeep.internal.crussell.io`)
      kind: Rule
      services:
        - name: karakeep
          port: 3000
  tls:
    certResolver: letsencrypt
